@startuml

abstract class EntityClass {
    - filterData: List<FilterData>?
    {abstract} + Get<T>(condition: string = ""): List<T>
    {abstract} + GetAll<T>(): List<T>
    {abstract} + Where<T>(where_condition: FilterData[]): List<T>
    {abstract} + Get_WhereIN<T>(Field: string, conditions: string?[]): List<T>
    {abstract} + Get_WhereNotIN<T>(Field: string, conditions: string[]): List<T>
    {abstract} + Find<T>(where_condition: FilterData[]?): T?
    {abstract} + Exists<T>(): Boolean
    {abstract} + SimpleGet<T>(): List<T>
    {static} + EndpointMethod<T>(): List<T>
    - BuildArrayIN(conditions: string?[]): string
    + Save(): object?
    + Update(): object?
    + Update(): bool
    + Update(Id: string): bool
    + Update(Id: string[]): bool
    + Delete(): bool
    + DescribeEntity(sqlEnumType: SqlEnumType): List<EntityProps>
}

abstract class StoreProcedureClass {
    - Parameters: List<Object>?
    {abstract} + Execute(): ResponseService
    {abstract} + Get<T>(): List<T>
}

abstract class TransactionalClass {
    - Conection: WDataMapper?
    {abstract} + BeginGlobalTransaction(): void
    {abstract} + CommitGlobalTransaction(): void
    {abstract} + RollBackGlobalTransaction(): void
}

class FilterData {
    - Values: List<string>?
}

class WDataMapper {
    - GDatos
}

class ResponseService {
    - status: int
    - message: string
}


EntityClass --|> TransactionalClass
StoreProcedureClass --|> TransactionalClass
EntityClass o-- FilterData
TransactionalClass o-- WDataMapper

@enduml
